<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            app:cardCornerRadius="16dp"
            android:elevation="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/enfermedades"
                    android:layout_width="wrap_content"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sarna_sarc1"/>

                <TextView
                    android:id="@+id/name_enfermedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="Sarna Sarcóptica"
                    android:layout_below="@id/enfermedades"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/vollkorn"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/descripción"
                    android:layout_below="@id/name_enfermedad"
                    android:layout_margin="8dp"
                    android:text="@string/descrip_sarna"/>

                <TextView
                    android:id="@+id/contagio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Métodos de contagio"
                    android:layout_below="@id/descripción"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/vollkorn"/>

                <TextView
                    android:id="@+id/descrip_contagio_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contagio"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/contagio_s_op1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/descrip_contagio_b"
                    android:layout_below="@id/descrip_contagio_a"
                    android:layout_margin="8dp"
                    android:text="@string/contagio_s_op2"/>

                <TextView
                    android:id="@+id/sintomas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Signos de la enfermedad"
                    android:layout_below="@id/descrip_contagio_b"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/vollkorn"/>

                <TextView
                    android:id="@+id/sintoma_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintomas"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op1" />

                <TextView
                    android:id="@+id/sintoma_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op2" />

                <TextView
                    android:id="@+id/sintoma_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_2"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op3" />

                <TextView
                    android:id="@+id/sintoma_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_3"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op4" />

                <TextView
                    android:id="@+id/sintoma_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_4"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op5" />

                <TextView
                    android:id="@+id/sintoma_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_5"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op6" />

                <TextView
                    android:id="@+id/sintoma_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sintoma_6"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/síntomas_s_op7" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>