<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:screenOrientation="portrait">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        style="@style/MyVerticalScrollViewStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/login_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/vollkorn_bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="80dp"

                app:cardCornerRadius="40dp"
                app:cardElevation="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/vollkorn_semibold"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plh_correo"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/icon_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/login_edit_text"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/black"
                            android:fontFamily="@font/vollkorn"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"
                            android:textColorHint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TextInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/plh_clave"
                        app:startIconDrawable="@drawable/icon_lock"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contrasenia"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/login_edit_text"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/black"
                            android:fontFamily="@font/vollkorn"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:textColorHint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/link_recuperar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:clickable="true"
                        android:fontFamily="@font/vollkorn_bold"


                        android:text="@string/lbl_recuperar"
                        android:textAlignment="textEnd"

                        android:textColor="#121CD8"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_ingresar"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/login_button_background"
                        android:fontFamily="@font/vollkorn"
                        android:onClick="Validar_Login"
                        android:text="@string/btn_ingresar"
                        android:textColor="@color/white"
                        android:textSize="20sp">

                    </androidx.appcompat.widget.AppCompatButton>

                    <TextView
                        android:id="@+id/crear_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/vollkorn_bold"
                        android:onClick="user"
                        android:text="@string/lbl_crear_user"
                        android:textAlignment="center"
                        android:textColor="#121CD8"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="100dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="21dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_borde_azul">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/logo_veterinaria"
                        android:contentDescription="logo" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="100dp"
                android:onClick="Instagram"
                app:cardCornerRadius="100dp"
                app:cardElevation="21dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:src="@drawable/icon_insta" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="21dp"
                android:layout_marginStart="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/icon_fb"
                    android:background="@color/white"/>

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>